// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Database Adapters > Adapters can generate SQL for tables > mysql-product-sql 1`] = `
"CREATE TABLE IF NOT EXISTS \`product\` (
  \`id\` DOUBLE PRIMARY KEY NOT NULL UNSIGNED UNIQUE DEFAULT null,
  \`name\` TEXT NOT NULL DEFAULT null,
  \`price\` DECIMAL(10, 2) NOT NULL DEFAULT null,
  \`sku\` TEXT NOT NULL UNIQUE DEFAULT null,
  \`inStock\` TINYINT(1) NULL DEFAULT 1,
  \`categories\` TEXT NULL DEFAULT '[]',
  \`createdAt\` DATE NOT NULL DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (\`id\`)
);"
`;

exports[`Database Adapters > Adapters can generate SQL for tables > mysql-user-sql 1`] = `
"CREATE TABLE IF NOT EXISTS \`user\` (
  \`id\` TEXT PRIMARY KEY NOT NULL UNIQUE DEFAULT null,
  \`username\` TEXT NOT NULL UNIQUE DEFAULT null,
  \`email\` TEXT NOT NULL UNIQUE DEFAULT null,
  \`active\` TINYINT(1) NULL DEFAULT 1,
  \`preferences\` JSON NULL DEFAULT '{"theme":"light","notifications":true}',
  \`tags\` TEXT NULL DEFAULT '[]',
  \`createdAt\` DATE NOT NULL DEFAULT CURRENT_TIMESTAMP,
  \`updatedAt\` DATE NOT NULL DEFAULT CURRENT_TIMESTAMP,
  \`deletedAt\` DATE NULL DEFAULT null,
  PRIMARY KEY (\`id\`)
);"
`;

exports[`Database Adapters > Adapters can generate SQL for tables > postgres-product-sql 1`] = `
"CREATE TABLE IF NOT EXISTS "product" (
  "id" REAL NOT NULL PRIMARY KEY UNIQUE DEFAULT NULL,
  "name" TEXT NOT NULL DEFAULT NULL,
  "price" REAL NOT NULL DEFAULT NULL,
  "sku" TEXT NOT NULL UNIQUE DEFAULT NULL,
  "inStock" BOOLEAN DEFAULT 'TRUE',
  "categories" TEXT DEFAULT '''[]''::jsonb',
  "createdAt" TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP
);
"
`;

exports[`Database Adapters > Adapters can generate SQL for tables > postgres-user-sql 1`] = `
"CREATE TABLE IF NOT EXISTS "user" (
  "id" TEXT NOT NULL PRIMARY KEY UNIQUE DEFAULT NULL,
  "username" TEXT NOT NULL UNIQUE DEFAULT NULL,
  "email" TEXT NOT NULL UNIQUE DEFAULT NULL,
  "active" BOOLEAN DEFAULT 'TRUE',
  "preferences" JSONB DEFAULT '''{"theme":"light","notifications":true}''::jsonb',
  "tags" TEXT DEFAULT '''[]''::jsonb',
  "createdAt" TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
  "updatedAt" TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
  "deletedAt" TIMESTAMP WITH TIME ZONE DEFAULT NULL
);
"
`;

exports[`Database Adapters > Adapters can generate SQL for tables > sqlite-product-sql 1`] = `
"CREATE TABLE IF NOT EXISTS "product" (
  "id" REAL PRIMARY KEY NOT NULL UNIQUE DEFAULT NULL,
  "name" TEXT NOT NULL DEFAULT NULL,
  "price" REAL NOT NULL DEFAULT NULL,
  "sku" TEXT NOT NULL UNIQUE DEFAULT NULL,
  "inStock" INTEGER DEFAULT '1',
  "categories" TEXT DEFAULT '''[]''',
  "createdAt" TEXT NOT NULL DEFAULT 'CURRENT_TIMESTAMP'
);"
`;

exports[`Database Adapters > Adapters can generate SQL for tables > sqlite-user-sql 1`] = `
"CREATE TABLE IF NOT EXISTS "user" (
  "id" TEXT PRIMARY KEY NOT NULL UNIQUE DEFAULT NULL,
  "username" TEXT NOT NULL UNIQUE DEFAULT NULL,
  "email" TEXT NOT NULL UNIQUE DEFAULT NULL,
  "active" INTEGER DEFAULT '1',
  "preferences" TEXT DEFAULT '''{"theme":"light","notifications":true}''',
  "tags" TEXT DEFAULT '''[]''',
  "createdAt" TEXT NOT NULL DEFAULT 'CURRENT_TIMESTAMP',
  "updatedAt" TEXT NOT NULL DEFAULT 'CURRENT_TIMESTAMP',
  "deletedAt" TEXT DEFAULT NULL
);"
`;
